--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Morning Cat's Blog
 SEOTitle: 晨猫的博客 | BY Blog
-header-img: img/desk_2019.png
+header-img: img/main/desk_2019_mini.png
 email: 1213252320@qq.com
 description: "Every failure is leading towards success."
 keyword: "BY, BY Blog, 晨猫的博客, morningcat, morningcat2018, java, spring, linux"
@@ -20,8 +20,6 @@ sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's us
 RSS: false
 gitee_username:     mengzhang6
 github_username:    morningcat2018
-#github_username:  mengzhang6
-#jianshu_username:   xxx
 csdn_username:   u013837825
 
 
@@ -63,9 +61,9 @@ gitalk:
   enable: false    #是否开启Gitalk评论
   clientID: f2c84e7629bb1446c1a4                            #生成的clientID
   clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
-  repo: qiubaiying.github.io    #仓库名称
-  owner: qiubaiying    #github用户名
-  admin: qiubaiying
+  repo: morningcat2018.github.io    #仓库名称
+  owner: morningcat2018    #github用户名
+  admin: morningcat2018
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
@@ -77,7 +75,7 @@ ba_track_id: b50bf2b12b5338a1845e33832976fd68
 
 # Google Analytics
 ga_track_id: 'UA-90855596-1'            # Format: UA-xxxxxx-xx
-ga_domain: qiubaiying.top               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
+ga_domain: auto               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
 
 
 
@@ -97,17 +95,17 @@ service-worker: true
 
 # Friends
 friends: [
-#    {
-#        title: "WY",
-#        href: "http://zhengwuyang.com"
-#    },{
-#        title: "简书·BY",
-#        href: "http://www.jianshu.com/u/e71990ada2fd"
-#    },{
-#        title: "Apple",
-#        href: "https://apple.com"
-#    },{
-#        title: "Apple Developer",
-#        href: "https://developer.apple.com/"
-#    }
+{
+  title: "CSDN",
+  href: "https://blog.csdn.net/u013837825"
+},{
+  title: "开源中国",
+  href: "https://my.oschina.net/mengzhang6/"
+},{
+  title: "码云·Gitee",
+  href: "https://gitee.com/mengzhang6/"
+},{
+  title: "Github",
+  href: "https://github.com/mengzhang6"
+}
 ]
