--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Morning Cat
-SEOTitle: 晨猫的博客 | MorningCat's Blog
+SEOTitle: 晨猫 | MorningCat's Blog
 header-img: img/main/desk_2019_mini.png
 email: 1213252320@qq.com
 description: "白茶清欢无别事  我在等风也等你"
