--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Morning Cat
 SEOTitle: 晨猫 | MorningCat's Blog
 header-img: img/main/desk_2019_mini.png
 email: 1213252320@qq.com
-description: "白茶清欢无别事  我在等风也等你"
+description: "-- --- .-. -. --. ..- .. .. -. --. .-.. .. -.- . --.- .. -.-. .- - .- --- "
 keyword: "BY, BY Blog, 晨猫的博客, morningcat, morningcat2018, java, spring, linux"
 url: "http://morningcat2018.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
