--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ sidebar-avatar: /img/main/gentle_001.jpg      # use absolute URL, seeing it's us
 
 
 # SNS settings
-RSS: false
+RSS: true
 github_username:    morningcat2018
 
 
@@ -51,29 +51,29 @@ kramdown:
 
 
 # 评论系统
-# Disqus（https://disqus.com/）
-# disqus_username: xxx
+Disqus（https://disqus.com/）
+disqus_username: morningcat
 
 # Gitalk
-gitalk:
-  enable: false    #是否开启Gitalk评论
-  clientID: xxx                            #生成的clientID
-  clientSecret: xxx    #生成的clientSecret
-  repo: morningcat2018.github.io    #仓库名称
-  owner: morningcat2018    #github用户名
-  admin: morningcat2018
-  distractionFreeMode: true #是否启用类似FB的阴影遮罩
+#gitalk:
+#  enable: false    #是否开启Gitalk评论
+#  clientID: xxx                            #生成的clientID
+#  clientSecret: xxx    #生成的clientSecret
+#  repo: morningcat2018.github.io    #仓库名称
+#  owner: morningcat2018    #github用户名
+#  admin: morningcat2018
+#  distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
 # 统计
 
 # Analytics settings
 # Baidu Analytics
-ba_track_id: b50bf2b12b5338a1845e33832976fd68
+#ba_track_id: b50bf2b12b5338a1845e33832976fd68
 
 # Google Analytics
-ga_track_id: 'UA-90855596-1'            # Format: UA-xxxxxx-xx
-ga_domain: auto               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
+#ga_track_id: 'UA-90855596-1'            # Format: UA-xxxxxx-xx
+#ga_domain: auto               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
 
 
 
@@ -93,17 +93,9 @@ service-worker: true
 
 # Friends
 friends: [
-#{
-#  title: "CSDN",
-#  href: "https://blog.csdn.net/u013837825"
-#},{
-#  title: "开源中国",
-#  href: "https://my.oschina.net/mengzhang6/"
-#},{
-#  title: "码云·Gitee",
-#  href: "https://gitee.com/mengzhang6/"
-#},{
-#  title: "Github",
-#  href: "https://github.com/mengzhang6"
-#}
+{
+  title: "开源中国",
+  href: "https://my.oschina.net/mengzhang6/"
+}
+
 ]
