--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Morning Cat
 SEOTitle: 晨猫 | MorningCat's Blog
 header-img: img/main/desk_2019_mini.png
-email: 1213252320@qq.com
+email: morningcat2018@qq.com
 description: "-- --- .-. -. --. ..- .. .. -. --. .-.. .. -.- . --.- .. -.-. .- - .- --- "
 keyword: "BY, BY Blog, 晨猫的博客, morningcat, morningcat2018, java, spring, linux"
 url: "http://morningcat2018.github.io"          # your host, for absolute URL
@@ -93,6 +93,18 @@ service-worker: true
 
 # Friends
 friends: [
+{
+  title: "网址书签",
+  href: "https://morningcat2018.github.io/2022/03/04/document-%E7%BD%91%E5%9D%80%E4%B9%A6%E7%AD%BE/"
+}
+{
+  title: "Golang学习之旅",
+  href: "https://morningcat2018.github.io/studygoNote/#/"
+}
+{
+  title: "CSDN",
+  href: "https://blog.csdn.net/u013837825"
+}
 {
   title: "开源中国",
   href: "https://my.oschina.net/mengzhang6/"
